Homepage buttons added. Functionality on buttons needed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 ---
-layout: default
+layout: homepage
 ---
-
-<h1 class="heading">ADAM LANCASTER<span>&nbsp;</span></h1>
+<section class="main">
+  <h1 class="heading">ADAM LANCASTER<span>&nbsp;</span></h1>
+  <div class="btn-wrap">
+    <button class="homepage-btns">STORY MODE</button>
+    <button class="homepage-btns">LEADERBOARD</button>
+    <button class="homepage-btns">PLAYER STATS</button>
+    <button class="homepage-btns">INSTRUCTIONS</button>
+  </div>
+</section>
