--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ layout: homepage
 <section class="main">
   <h1 class="heading">ADAM LANCASTER<span>&nbsp;</span></h1>
   <div class="btn-wrap">
-    <button class="homepage-btns">STORY MODE</button>
-    <button class="homepage-btns">LEADERBOARD</button>
-    <button class="homepage-btns">PLAYER STATS</button>
-    <button class="homepage-btns">INSTRUCTIONS</button>
+    <a href="https://36bcab.wordpress.com"><button class="homepage-btns">STORY MODE</button></a>
+    <a href="/leaderboard"><button class="homepage-btns">LEADERBOARD</button></a>
+    <a href="/cv"><button class="homepage-btns">PLAYER STATS</button></a>
+    <a href="/about"><button class="homepage-btns">INSTRUCTIONS</button></a>
   </div>
 </section>
