Basic styling of leaderboard page

--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -1,14 +1,16 @@
 ---
 layout: homepage
 ---
+<section class="leaderboard">
 <h1>LEADERBOARD</h1>
 <ul>
-  <li>1st <a href="https://github.com/michaellennox/jobber">JOB TRACKR</a>
+  <li><span class="numbers">1st.....</span> <a href="https://github.com/michaellennox/jobber">JOB TRACKR</a>
   </li>
-  <li>2nd <a href="https://github.com/Adzz/WISHD">WISHD</a>
+  <li><span class="numbers">2nd.....</span> <a href="https://github.com/Adzz/WISHD">WISHD</a>
   </li>
-  <li>3rd <a href="https://github.com/Adzz/fizz-buzz-clojure">CLOJURE FIZZBUZZ</a>
+  <li><span class="numbers">3rd.....</span> <a href="https://github.com/Adzz/fizz-buzz-clojure">CLOJURE FIZZBUZZ</a>
   </li>
-  <li>4th <a href="">HIPSTERGRAM</a>
+  <li><span class="numbers">4th.....</span> <a href="">HIPSTERGRAM</a>
   </li>
 </ul>
+</section>
