--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -6,7 +6,7 @@ layout: homepage
 <ul>
   <li><span class="numbers">1st.....</span> <a href="https://github.com/michaellennox/jobber">JOB TRACKR</a>
   </li>
-  <li><span class="numbers">2nd.....</span> <a href="https://github.com/Adzz/WISHD">WISHD</a>
+  <li><span class="numbers">2nd.....</span> <a href="https://github.com/Adzz/WISHD">W.I.S.H.D.</a>
   </li>
   <li><span class="numbers">3rd.....</span> <a href="https://github.com/Adzz/fizz-buzz-clojure">CLOJURE FIZZBUZZ</a>
   </li>
