Adds draft folder and first few drafts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: homepage
   <h1 class="heading">ADAM LANCASTER<span>&nbsp;</span></h1>
   <div class="btn-wrap">
     <a href="https://36bcab.wordpress.com"><button class="homepage-btns">STORY MODE</button></a>
-    <a href="/leaderboard"><button class="homepage-btns">LEADERBOARD</button></a>
+    <a href="/leaderboard"><button class="homepage-btns">HALL OF FAME</button></a>
     <a href="/cv"><button class="homepage-btns">PLAYER STATS</button></a>
     <a href="/about"><button class="homepage-btns">INSTRUCTIONS</button></a>
   </div>
