--- a/_posts/2015-11-07-live-dangerously.html
+++ b/_posts/2015-11-07-live-dangerously.html
@@ -4,42 +4,42 @@ title: Live Dangerously
 category: makers
 ---
 
-There is a saying that goes:
+<p>There is a saying that goes...</p>
 
-[A LITTLE KNOWLEDGE IS A DANGEROUS THING](https://en.wikipedia.org/wiki/An_Essay_on_Criticism)*
+<p><a href="https://en.wikipedia.org/wiki/An_Essay_on_Criticism">A LITTLE KNOWLEDGE IS A DANGEROUS THING</a></p>
 
-For example, a little knowledge of how to play the acoustic guitar *could* make you think it’s a good idea to pull one out at a house party - and then actually play it.
+<p>For example, a little knowledge of how to play the acoustic guitar *could* make you think it’s a good idea to pull one out at a house party - and then actually play it.</p>
 
 <img src="{{site.baseurl}}/assets/images/blog-images/party.jpg" alt="house party pic" height="200" width="300">
 
 
-We can all clearly see the danger here.
+<p>We can all clearly see the danger here.</p>
 
-Alternatively, you might think: beards are cool. [Girls like beards](http://www.buzzfeed.com/javiermoreno/29-beard-and-man-bun-combinations-that-will-awaken-your-inne#.ccdrWxq8m). I should grow a beard. All the while blissfully unaware that it’s just not a skill that everyone has.
+<p>Alternatively, you might think: beards are cool. <a href="http://www.buzzfeed.com/javiermoreno/29-beard-and-man-bun-combinations-that-will-awaken-your-inne#.ccdrWxq8m">Girls like beards</a>. I should grow a beard. All the while blissfully unaware that it’s just not a skill that everyone has.</p>
 
 <img src="{{site.baseurl}}/assets/images/blog-images/beard.jpg" alt="bad beard picture" height="290" width="210">
 
 See?
 
-Similarly a little knowledge about programming might encourage you to install things like zsh, homebrew and rvm, long before you have any real need of them, and way before any knowledge of their intended purpose or relative merits.
+<p>Similarly a little knowledge about programming might encourage you to install things like zsh, homebrew and rvm, long before you have any real need of them, and way before any knowledge of their intended purpose or relative merits.</p>
 
-Your newfound knowledge might even make you think that it’s cool to change settings that you don’t really understand; smash words like ‘SUDO’ into the terminal and watch all your problems disappear… Until of course they don’t. They come back bigger and harder to define.
+<p>Your newfound knowledge might even make you think that it’s cool to change settings that you don’t really understand; smash words like ‘SUDO’ into the terminal and watch all your problems disappear… Until of course they don’t. They come back bigger and harder to define.</p>
 
-This means when it comes to setting up your computer ahead of the Makers Academy pre course, instead of following the helpful informative guide they send you, you may spend an inordinate amount of time backtracking and problem shooting what should have been a simple:
+<p>This means when it comes to setting up your computer ahead of the Makers Academy pre course, instead of following the helpful informative guide they send you, you may spend an inordinate amount of time backtracking and problem shooting what should have been a simple:</p>
 
-```
+<code>
 $ Brew install heroku-toolbelt
-```
+</code>
 
-If a little knowledge is a dangerous thing, I’ve been living on the edge of oblivion!
+<p>If a little knowledge is a dangerous thing, I’ve been living on the edge of oblivion!</p>
 
-Nevertheless I’ve always liked this phrase for two reasons
+<p>Nevertheless I’ve always liked this phrase for two reasons</p>
 
-I’ve always felt especially capable of proving the truth of it (see above)
+<p>I’ve always felt especially capable of proving the truth of it (see above)
 It almost makes my poor decisions sound badass
-A little knowledge is dangerous. Yea… Dangerous. Like a ninja!
+A little knowledge is dangerous. Yea… Dangerous. Like a ninja!</p>
 
-But dangerous is what you have to be. A little knowledge is the first step to a lot of it, so the first step is always dangerous. When we only know a little we create the mistakes that force us to learn a lot. This is a good thing; we need to be knowledge ninjas. When you know nothing, doing anything is the best first step. And solving the problems our ignorance creates is the best way to escape it.
+<p>But dangerous is what you have to be. A little knowledge is the first step to a lot of it, so the first step is always dangerous. When we only know a little we create the mistakes that force us to learn a lot. This is a good thing; we need to be knowledge ninjas. When you know nothing, doing anything is the best first step. And solving the problems our ignorance creates is the best way to escape it.</p>
 
 
 
