--- a/_drafts/8-bit-buttons-sass.html
+++ b/_drafts/8-bit-buttons-sass.html
@@ -4,7 +4,9 @@ title: 8 bit buttons in Sass
 category: code
 ---
 
-<p>In designing the landing page for this website I decided to go for a retro 80's hacker feel. Both the color scheme and the <a href="https://www.google.com/fonts/specimen/Press+Start+2P">Press start 2P</a> font lend themselves marvellously to the cause, but it was still missing one thing:</p>
+<p>One of the best things about coding is how easy it is to make your life hard. 
+
+ Both the color scheme and the <a href="https://www.google.com/fonts/specimen/Press+Start+2P">Press start 2P</a> font lend themselves marvellously to the cause, but it was still missing one thing...</p>
 <h3 class="subheading center-align">8 Bit Buttons</h3>
 <p>I am using <a href="https://jekyllrb.com/">jekyll</a> to make the site, which means I'm using <a href="http://sass-lang.com/">Sass</a> to style it. Or at least trying to. My aim was to see if I could style some pure css 8 bit looking buttons, and wrap it up in a Sass mixin.</p>
 <p>Here is the result:</p>
