--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ title: home
 <section class="main">
   <h1 class="heading">ADAM LANCASTER<span>&nbsp;</span></h1>
   <div class="btn-wrap">
-    <a href="/blog"><button class="homepage-btns">STORY MODE</button></a>
-    <a href="/leaderboard"><button class="homepage-btns">HALL OF FAME</button></a>
-    <a href="/cv"><button class="homepage-btns">PLAYER STATS</button></a>
-    <a href="/about"><button class="homepage-btns">INSTRUCTIONS</button></a>
+    <a href="/blog"><button class="eightbit-btns">STORY MODE</button></a>
+    <a href="/leaderboard"><button class="eightbit-btns">HALL OF FAME</button></a>
+    <a href="/cv"><button class="eightbit-btns">PLAYER STATS</button></a>
+    <a href="/about"><button class="eightbit-btns">INSTRUCTIONS</button></a>
   </div>
 </section>
