This one actually adds a new post 8 bit buttons

--- a/_posts/2016-03-29-8-bit-buttons-sass.html
+++ b/_posts/2016-03-29-8-bit-buttons-sass.html
@@ -136,6 +136,6 @@ category: code
 {% endhighlight %}
 
 <p>This is good, but I found myself repeating the &:active content a lot. I think it comes down to what works for you. Either way I hope this helps someone.</p>
-<p>Feel free to <a href="https://twitter.com/itizadz">tweet me</a> any comments or improvements</p>
+<p>Feel free to <a href="https://twitter.com/itizadz">tweet me</a> any comments or improvements.</p>
 
 
