--- a/_posts/2016-03-29-8-bit-buttons-sass.html
+++ b/_posts/2016-03-29-8-bit-buttons-sass.html
@@ -46,7 +46,7 @@ category: code
         content: "";
         display: block;
         position: absolute;
-        background-color: $green-iterm;
+        background-color: $bg-color;
         top: 10px;
         bottom: 10px;
         left: -10px;
@@ -59,7 +59,7 @@ category: code
       content: "";
       display: block;
       position: absolute;
-      background-color: $green-iterm;
+      background-color: $bg-color;
       top: 4px;
       bottom: 4px;
       left: -6px;
@@ -74,7 +74,7 @@ category: code
 
 {% highlight sass linenos %}
 .eightbit-btns {
-  @include pixelated-btns($green-iterm, $black, 2em, 43vh);
+  @include pixelated-btns($green, $black, 2em, 43vh);
   // more styles...
 }
 {% endhighlight %}
@@ -97,7 +97,7 @@ category: code
       content: "";
       display: block;
       position: absolute;
-      background-color: $green-iterm;
+      background-color: $bg-color;
       top: 10px;
       bottom: 10px;
       left: -10px;
@@ -110,7 +110,7 @@ category: code
     content: "";
     display: block;
     position: absolute;
-    background-color: $green-iterm;
+    background-color: $bg-color;
     top: 4px;
     bottom: 4px;
     left: -6px;
@@ -124,7 +124,7 @@ category: code
 
 {% highlight sass linenos %}
 .eightbit-btns {
-  @include pixelated-btns($green-iterm, $black, 2em);
+  @include pixelated-btns($green, $black, 2em);
   //more styles...
   top:43vh;
    &:active {
