Enemey of the state posts

--- a/_drafts/sass-mixin-link-style.html
+++ b/_drafts/sass-mixin-link-style.html
@@ -1,6 +1,9 @@
-Usually I try and make the mixins as tag agnostic as possible. Why? 
+Usually I try and make the mixins as tag agnostic as possible. Why?
 some examples. Doesn't feel right to include a tag in their definitions because it ties it too closely to what we are trying to style? Because I feel like the mixin should be agnostic about what it's being aplied too. The same way that we  might keep any method agnostic about what it's being called on?
 
-But while attempting to improve the link styles on my blog I came across a notable exception. Taking inspiration from the amazing Wired website, i made the following mixin. I ncluded the a tag in the mixin because it allowed me to apply it to here: Which meant When writing a post I didn't have to keep repeating the class name on all the links. More importantly it meant I could apply the new changes without having to manually apply the class to every link tag on every old blog post.
+But while attempting to improve the link styles on my blog I came across a notable exception. Taking inspiration from the amazing Wired website, i made the following mixin. I ncluded the a tag in the mixin because it allowed me to apply it to here:
+
+
+Which meant When writing a post I didn't have to keep repeating the class name on all the links. More importantly it meant I could apply the new changes without having to manually apply the class to every link tag on every old blog post.
 
 coupling vs dry code?
