--- a/_posts/2016-07-17-currying.html
+++ b/_posts/2016-07-17-currying.html
@@ -75,3 +75,11 @@ So our addTen() always adds ten to whatever we pass in. We can make similar func
   let addSeventy = add(70)  // ... and so on...
 {% endhighlight %}
 </p>
+
+
+
+
+
+
+
+but why would you curry? What's the actual benifit, or more importantly, what's the downside of not? Having one giant function that has a million parameters. 
