Site overhaul. Implements hyde theme. Updates existing blog content

--- a/_posts/2015-11-07-live-dangerously.html
+++ b/_posts/2015-11-07-live-dangerously.html
@@ -2,6 +2,7 @@
 layout: post
 title: Live Dangerously
 category: makers
+comments: true
 ---
 
 <p>There is a saying that goes...</p>
@@ -10,14 +11,14 @@ category: makers
 
 <p>For example, a little knowledge of how to play the acoustic guitar *could* make you think it’s a good idea to pull one out at a house party - and then actually play it.</p>
 <figure>
-  <img src="{{site.baseurl}}/assets/images/blog-images/party.jpg" alt="house party pic" height="200" width="300">
+  <img src="/assets/images/blog-images/party.jpg" alt="house party pic" height="200" width="300">
   <figcaption>We can all clearly see the danger here.</figcaption>
 </figure>
 
 <p>Alternatively, you might think: beards are cool. <a href="http://www.buzzfeed.com/javiermoreno/29-beard-and-man-bun-combinations-that-will-awaken-your-inne#.ccdrWxq8m">Girls like beards</a>. I should grow a beard. All the while blissfully unaware that it’s just not a skill that everyone has.</p>
 
 <figure>
-  <img src="{{site.baseurl}}/assets/images/blog-images/beard.jpg" alt="bad beard picture" height="290" width="210">
+  <img src="/assets/images/blog-images/beard.jpg" alt="bad beard picture" height="290" width="210">
   <figcaption>See?</figcaption>
 </figure>
 
