--- a/_posts/2015-11-20-git-workflow-basics.html
+++ b/_posts/2015-11-20-git-workflow-basics.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Git Workflow Basics
+comments: true
 category: makers
 ---
 
@@ -50,8 +51,7 @@ $git commit</code></pre>
 [REPEAT 3-4 UNTIL FINISHED]
 [THEN WHEN FINISHED]
 6. PULL REQUEST.
-
-<pre>
+</pre>
 
 <p>Once you've tried it a couple of times it becomes second nature. If it hasn't yet <a href="http://betterexplained.com/articles/aha-moments-when-learning-git/">this</a> might help.</p>
 
