--- a/_posts/2015-12-05-play-the-keyboard.html
+++ b/_posts/2015-12-05-play-the-keyboard.html
@@ -2,6 +2,7 @@
 layout: post
 title: Play the keyboard
 category: makers
+comments: true
 ---
 
 <p>It must be hard being a keyboard player. There is something fundamentally unimpressive about it.</p>
