--- a/_posts/2015-12-10-avoiding-perfection.html
+++ b/_posts/2015-12-10-avoiding-perfection.html
@@ -2,6 +2,7 @@
 layout: post
 title: Avoiding Perfection
 category: makers
+comments: true
 ---
 
 <p>The deeper I dive and the further I swim in software development the more I realise the need to avoid perfection.</p>
