--- a/_posts/2016-01-13-avoiding-rabbit-holes.html
+++ b/_posts/2016-01-13-avoiding-rabbit-holes.html
@@ -2,6 +2,7 @@
 layout: post
 title: Avoiding Rabbit Holes
 category: makers
+comments: true
 ---
 
 <p>We are not here to learn Ruby, we are here to learn programming. With that in mind this week begins a shift away from ruby (for now) towards… javascript!
