--- a/_posts/2016-07-17-currying.html
+++ b/_posts/2016-07-17-currying.html
@@ -2,11 +2,8 @@
 layout: post
 title: Enemy of the State - Currying
 category: code
+comments: true
 ---
-
-<p>This is the start of a series of blog posts about functional programming. The rough approach will be to break FP down into its smallest composite parts and examine each in turn.</p>
-<p>
-There are already a deluge of blog posts on functional programming, most of them written by people much smarter than me, who know the topic much more thouroughly and who can probably express their ideas much more succinctly. You might think it's a terrible idea for me to try and improve on anything that's already been said. And to that I would say I agree with you completely. </p>
 
 <p>So what is Currying? Currying is a way to partially apply a function, by taking a function that takes muliple arguments, and splitting them into nested functions which each take one argument each.</p>
 
@@ -77,9 +74,4 @@ So our addTen() always adds ten to whatever we pass in. We can make similar func
 </p>
 
 
-
-
-
-
-
-but why would you curry? What's the actual benifit, or more importantly, what's the downside of not? Having one giant function that has a million parameters. 
+<!-- but why would you curry? What's the actual benifit, or more importantly, what's the downside of not? Having one giant function that has a million parameters. -->
