--- a/_posts/2017-10-05-category-theory-for-programmers-part-1-monoids.html
+++ b/_posts/2017-10-05-category-theory-for-programmers-part-1-monoids.html
@@ -150,8 +150,9 @@ comments: true
   {% endhighlight  %}
 </p>
 
-<h4>Concatinating Arrays</h4>
-<p>To concatenate two arrays, you take the all the elements out of the first array and then all the elements out of the second array and put them all into a new array.</p>
+<h4>Concatenating Arrays</h4>
+<p>Now let's look at another example - concatenating arrays.</p>
+<p>To Concatenating two arrays, you take the all the elements out of the first array and then all the elements out of the second array and put them all into a new array.</p>
   {% highlight ruby  %}
 [1,2].concat([3,4]) == [1,2,3,4]
   {% endhighlight  %}
