--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
       <ul>
         <li>
           <a
+            href="https://medium.com/@ItizAdz/zip-elixir-abusing-protocols-for-triple-dispatch-and-ultimate-flexibility-4c817a5940d6"
+            >Zips in Elixir — Using protocols for triple dispatch and ultimate
+            flexibility.</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://medium.com/@ItizAdz/creating-a-has-one-of-association-in-ecto-with-ectomorph-3932adb996d9"
+            >Creating a has_one_of association in Ecto with EctoMorph</a
+          >
+        </li>
+        <li>
+          <a href="https://medium.com/@ItizAdz/ecto-cast-ing-sugar-31bddbc62cd7"
+            >Ecto Casting Sugar</a
+          >
+        </li>
+        <li>
+          <a
             href="https://medium.com/@ItizAdz/ecto-changesets-put-cast-embeds-and-assocs-remember-the-difference-once-and-for-all-10781cc60857?sk=5544b0bd43e87e6852550ffc25e0f4eb"
             >Ecto Changesets — put, cast, embeds and assocs. Remember the
             difference once and for all!</a
